<resources>
    <string name="app_name">TechPain</string>
    <string name="inicio_titulo">Acessar paciente</string>
    <string name="inicio_cpf">CPF:</string>
    <string name="inicio_entrar">Entrar</string>
    <string name="inicio_cadastro">Cadastrar</string>
    <string name="inicio_aviso">Usuário não cadastrado.</string>
    <string name="title_activity_body1">Body1</string>
    <string name="desfazer">Desfazer</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>
    <string name="title_activity_perfil_adicao">PerfilAdicao</string>
    <string name="txtconfirma">Antes de enviar as informações para o aparelho,\ninforme quantos amperes:</string>
    <string name="a">A</string>
    <string name="splash">Splash</string>
    <string name="btnconfirma">Confirmar</string>
    <string name="title_activity_intensity">Intensity</string>

</resources>
