<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ampere">

    <TextView
        android:id="@+id/txv_ampere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtconfirma"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:id="@+id/box_ampere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_ampere"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/edt_ampere"
            android:layout_width="80dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:textColor="@color/black"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_confirma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnconfirma"
        android:layout_below="@id/box_ampere"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="onClickConfirma"/>

</RelativeLayout>