<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BodyImage"
    android:id="@+id/layoutBody"
    android:orientation="horizontal">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="290dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn_desfaz"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="@string/desfazer"
        android:layout_alignParentRight="true"
        android:onClick="onClickBtnDesfaz"/>

    <Button
        android:id="@+id/btn_salvar"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_desfaz"
        android:layout_marginTop="20dp"
        android:onClick="onClickBtnSalva"/>

    <Button
        android:id="@+id/btn_voltar_imagem"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        android:layout_below="@+id/btn_salvar"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:onClick="voltar"/>
    <Button
        android:id="@+id/btn_lado"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="Virar"
        android:layout_below="@id/btn_voltar_imagem"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:onClick="onClickLado"/>


</RelativeLayout>